# scratch-test-spec

./: Cargo.toml
.github/workflows/: deploy-docs-to-pages.yml
sb3/: sum-from-to-with-repeat-loop.sb3  sum-from-to.sb3
src/: checks.rs  conditions.rs  helper.rs  lib.rs  lints.rs  parts.rs  test_output.rs
src/checks/: builder.rs  case_check.rs  condition.rs  criterion.rs  selector.rs  severity.rs  single_condition.rs  transformation.rs
src/parts/: category.rs  specification.rs  static_category.rs  test_case.rs
tests/: sum-from-to-with-lints.rs  sum-from-to.rs
